--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,27 @@
+html, body{
+    
+    font-family: Arial, sans-serif;
+    height: auto;
+
+    width: 80%;
+    margin: 0 auto;
+   
+   
+}
+div{
+    border-radius: 5px;
+    background-color: azure;
+    padding: 20px;
+    margin: 20px;
+    
+   
+}
+
 table{
-    width: 50%;
+    width: 80%;
+    margin-left: 50px;
+    border-radius: 30px;
+    padding:0;
     
 }
 
@@ -9,4 +31,14 @@ table, th, td{
     padding: 5px;
     text-align: center;
 
+}
+th{
+    color: #f1faee;
+    background-color: #1d3557;
+}
+tr:nth-child(even){
+    background-color: #f1faee;
+}
+tr:nth-child(odd){
+    background-color: #a8dadc;
 }
